--- a/Projeto/musica.html
+++ b/Projeto/musica.html
@@ -24,7 +24,7 @@
 		    	</table>	
 		  	</div>
 		</a>
-  	  	<a href="bebidas.html">
+  	  	<a href="menu.html">
 	  	  	<div class="icones" id="menu">
 		  	  		<table  class="header_table">
 				  		<tr>
