--- a/Projeto/pagamento.html
+++ b/Projeto/pagamento.html
@@ -27,7 +27,7 @@
 		    	</table>	
 		  	</div>
 		</a>
-  	  	<a href="bebidas.html">
+  	  	<a href="menu.html">
 	  	  	<div class="icones" id="menu">
 		  	  		<table class="header_table">
 				  		<tr>
