add slogan, add cancel/confirm buttons, changed payment

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -66,6 +66,8 @@
   	</div>
   	<!--fim da barra fixa-->
 
+  	<p id="slogan">BarISTa</p>
+
   	<!--inicio ajuda/pagamento-->
  	<div id="buttons">
   		<a href="ajuda.html">
