--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -118,6 +118,10 @@
 			  				<td><div class="icones_lista" id="item">Artigo</div></td>
 			  				<td><div class="icones_lista" id="rmv" onclick="deleteRow('1')">X</div></td>
 			  			</tr>	
+			  			<tr>
+			  				<td><div class="icones_lista" id="cancelar"><b>Cancelar</b></div></td>
+	  	  					<td><div class="icones_lista" id="confirmar"><b>Confirmar</b></div></td>
+						</tr>
 			  		</table>
 			  	</div>
 			</td>	
