add search option to menu

--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -80,14 +80,14 @@
 				<div id="bebidas">
 			  		<table id="produtos">
 			  			<tr>
-			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Bebida 1')">Bebida 1</div></td>
-			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Bebida 2')">Bebida 2</div></td>
-			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Bebida 3')">Bebida 3</div></td>
+			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Água')">Água</div></td>
+			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Café')">Café</div></td>
+			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Absinto')">Absinto</div></td>
 			  			</tr>
 			  			<tr>
-			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Bebida 4')">Bebida 4</div></td>
-			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Bebida 5')">Bebida 5</div></td>
-			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Bebida 6')">Bebida 6</div></td>
+			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Coca-Cola')">Coca-Cola</div></td>
+			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Ice Tea')">Ice Tea</div></td>
+			  				<td><div class="icones_bebidas" onclick="addItem('lista_produtos','Vodka')">Vodka</div></td>
 			  			</tr>
 			  		</table>
 			  	</div>
