--- a/Projeto/menu1.html
+++ b/Projeto/menu1.html
@@ -323,11 +323,7 @@
 				<div style="margin-right: 4%;">	
 					<table id="header_produtos">
 						<tr>
-							<td>+</td>
-							<td>qtd</td>
-							<td>-</td>
-							<td>Artigo</td>
-							<td>X</td>
+							<td>A Pedir...</td>
 						</tr>
 					</table>
 				</div>
