--- a/Projeto/pagamento.html
+++ b/Projeto/pagamento.html
@@ -20,7 +20,7 @@
   		</div>
   		<p id="frase1"> Aguarde pelo empregado. </p>
  		<!--<p id="frase1"> Aguarde pelo empregado.</p>-->
- 		<p id="frase2"> Obrigado pela visita! Esperemos que tenha gostado. </p>
+ 		<p id="frase2"> Obrigado pela visita! Esperamos que tenha gostado. </p>
  		<p id="frase3"> Até à próxima! </p>
 
   </body>
