--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -86,27 +86,35 @@
 			  		<button class="sort" data-sort="price" onclick="Search('bebidas')">
 			  			Procurar por preço
 			  		</button>
+
+			  		<!--botao de pesquisa por alcool-->
+			  		<label class="switch">
+						<input class="switch-input" type="checkbox" />
+						<span class="switch-label" data-on="c/ alcool" data-off="s/ alcool" data-sort="type" onclick="Search('bebidas')"></span> 
+						<span class="switch-handle"></span> 
+					</label>
+			  		<!--botao de pesquisa por alcool-->
 			  		
 			  		<ul class="list">
-			  			<li onclick="addItem('lista_produtos','Água')" class="icones_bebidas">
+			  			<li onclick="addItem('lista_produtos1','Água')" class="icones_bebidas">
 			  				<table>
 			  					<tr>
 						  			<td class="name">Água</td>
-						  			<td class="type">Sem alcool</td>
+						  			<td class="type">s/ alcool</td>
 						  			<td class="price">2.00€</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Coca-Cola')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Coca-Cola')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Coca-Cola</td>
-						  			<td class="type">Sem alcool</td>
+						  			<td class="type">s/ alcool</td>
 						  			<td class="price">1.50€</td>
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Ice Tea')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Ice Tea')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Ice Tea</td>
@@ -115,7 +123,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Café')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Café')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Café</td>
@@ -124,7 +132,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Absinto')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Absinto')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Absinto</td>
@@ -133,7 +141,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Vodka Laranja')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Vodka Laranja')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Vodka Laranja</td>
@@ -142,7 +150,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Vodka Limão')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Vodka Limão')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Vodka Limão</td>
@@ -151,7 +159,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Vodka Cola')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Vodka Cola')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Vodka Cola</td>
@@ -160,7 +168,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Rum')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Rum')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Rum</td>
@@ -169,7 +177,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Somersby de Maçã')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Somersby de Maçã')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Somersby de Maçã</td>
@@ -178,7 +186,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Somersby Frutos Vermelhos')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Somersby Frutos Vermelhos')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Somersby Frutos Vermelhos</td>
@@ -187,7 +195,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Tequila')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Tequila')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Tequila</td>
@@ -196,7 +204,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Whisky')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Whisky')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Whisky</td>
@@ -205,7 +213,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Whisky Cola')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Whisky Cola')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Whisky Cola</td>
@@ -214,7 +222,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Vinho Branco')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Vinho Branco')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Vinho Branco</td>
@@ -223,7 +231,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Vinho Tinto')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Vinho Tinto')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Vinho Tinto</td>
@@ -247,7 +255,7 @@
 			  		</button>
 			  		
 			  		<ul class="list">
-			  			<li onclick="addItem('lista_produtos','Hamburger')" class="icones_bebidas">
+			  			<li onclick="addItem('lista_produtos1','Hamburger')" class="icones_bebidas">
 			  				<table>
 			  					<tr>
 						  			<td class="name">Hamburger</td>
@@ -256,7 +264,7 @@
 						  	</table>
 		  					<p class="description_1">Pão, carne de vaca e alface</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Cheeseburger')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Cheeseburger')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Cheeseburger</td>
@@ -265,7 +273,7 @@
 						  	</table>
 				  			<p class="description">Pão, carne de vaca, queijo e alface</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Cachorro Quente')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Cachorro Quente')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Cachorro Quente</td>
@@ -274,7 +282,7 @@
 						  	</table>
 						  	<p class="description_1">Pão, salsicha e batata frita</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Bifana')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Bifana')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Bifana</td>
@@ -283,7 +291,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com carne de porco</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Torradas')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Torradas')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Torradas</td>
@@ -292,7 +300,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com manteiga</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Prego no Pão')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Prego no Pão')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Prego no Pão</td>
@@ -301,7 +309,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com carne de vaca</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Amendoins')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Amendoins')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Amendoins</td>
@@ -309,7 +317,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos','Tremoços')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Tremoços')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Tremoços</td>
@@ -352,7 +360,7 @@
 			  	<div>
 			  		<table id="conf_can">
 						<tr>
-							<td><div class="icones_lista" id="cancelar" onclick="deleteList('lista_produtos')"><b>Cancelar</b></div></td>
+							<td><div class="icones_lista" id="cancelar" onclick="deleteList('lista_produtos1')"><b>Cancelar</b></div></td>
 							<td><div class="icones_lista" id="confirmar" onclick="confirmationMsg()"><b>Confirmar</b></div></td>
 						</tr>
 			  		</table>
