--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -96,7 +96,7 @@
 			  		<!--botao de pesquisa por alcool-->
 			  		
 			  		<ul class="list">
-			  			<li onclick="addItem('lista_produtos1','Água')" class="icones_bebidas">
+			  			<li onclick="addItem('lista_produtos1','Água','2.00')" class="icones_bebidas">
 			  				<table>
 			  					<tr>
 						  			<td class="name">Água</td>
@@ -105,7 +105,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Coca-Cola')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Coca-Cola','1.50')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Coca-Cola</td>
@@ -114,7 +114,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Ice Tea')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Ice Tea','1.50')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Ice Tea</td>
@@ -123,7 +123,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Café')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Café','1.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Café</td>
@@ -132,7 +132,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Absinto')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Absinto','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Absinto</td>
@@ -141,7 +141,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Vodka Laranja')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Vodka Laranja','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Vodka Laranja</td>
@@ -150,7 +150,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Vodka Limão')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Vodka Limão','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Vodka Limão</td>
@@ -159,7 +159,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Vodka Cola')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Vodka Cola','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Vodka Cola</td>
@@ -168,7 +168,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Rum')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Rum','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Rum</td>
@@ -177,7 +177,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Somersby de Maçã')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Somersby de Maçã','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Somersby de Maçã</td>
@@ -186,7 +186,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Somersby Frutos Vermelhos')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Somersby Frutos Vermelhos','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Somersby Frutos Vermelhos</td>
@@ -195,7 +195,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Tequila')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Tequila','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Tequila</td>
@@ -204,7 +204,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Whisky')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Whisky','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Whisky</td>
@@ -213,7 +213,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Whisky Cola')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Whisky Cola','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Whisky Cola</td>
@@ -222,7 +222,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Vinho Branco')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Vinho Branco','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Vinho Branco</td>
@@ -231,7 +231,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Vinho Tinto')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Vinho Tinto','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Vinho Tinto</td>
@@ -255,7 +255,7 @@
 			  		</button>
 			  		
 			  		<ul class="list">
-			  			<li onclick="addItem('lista_produtos1','Hamburger')" class="icones_bebidas">
+			  			<li onclick="addItem('lista_produtos1','Hamburger','6.00')" class="icones_bebidas">
 			  				<table>
 			  					<tr>
 						  			<td class="name">Hamburger</td>
@@ -264,7 +264,7 @@
 						  	</table>
 		  					<p class="description_1">Pão, carne de vaca e alface</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Cheeseburger')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Cheeseburger','6.50')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Cheeseburger</td>
@@ -273,7 +273,7 @@
 						  	</table>
 				  			<p class="description">Pão, carne de vaca, queijo e alface</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Cachorro Quente')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Cachorro Quente','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Cachorro Quente</td>
@@ -282,7 +282,7 @@
 						  	</table>
 						  	<p class="description_1">Pão, salsicha e batata frita</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Bifana')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Bifana','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Bifana</td>
@@ -291,7 +291,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com carne de porco</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Torradas')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Torradas','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Torradas</td>
@@ -300,7 +300,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com manteiga</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Prego no Pão')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Prego no Pão','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Prego no Pão</td>
@@ -309,7 +309,7 @@
 						  	</table>
 						  	<p class="description_1">Pão com carne de vaca</p>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Amendoins')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Amendoins','1.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Amendoins</td>
@@ -317,7 +317,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Tremoços')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Tremoços','1.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Tremoços</td>
@@ -325,7 +325,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Lays Originais')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Lays Originais','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 						  			<td class="name">Batatas Lays Originais</td>
@@ -333,7 +333,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Tiras de Milho')" class="icones_bebidas">
+				  		<li onclick="addItem('lista_produtos1','Tiras de Milho','2.00')" class="icones_bebidas">
 				  			<table>
 				  				<tr>
 						  			<td class="name">Tiras de Milho</td>
@@ -348,7 +348,7 @@
 				<div style="margin-right: 4%;">	
 					<table id="header_produtos">
 						<tr>
-							<td style="color: #333;"><b>A Pedir...</b></td>
+							<td id="header_produtos1" style="color: white;font-weight: bold;background-color: #333;">Total: 0€</td>
 						</tr>
 					</table>
 				</div>
