add images to bebidas

--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -99,6 +99,7 @@
 			  			<li onclick="addItem('lista_produtos1','Água','2.00')" class="icones_bebidas">
 			  				<table>
 			  					<tr>
+			  						<td id="td_img"><img src="agua.png" id="img_menu"/></td>
 						  			<td class="name">Água</td>
 						  			<td class="type">s/ alcool</td>
 						  			<td class="price">2.00€</td>
@@ -108,6 +109,7 @@
 				  		<li onclick="addItem('lista_produtos1','Coca-Cola','1.50')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="coca-cola.png" id="img_menu"/></td>
 						  			<td class="name">Coca-Cola</td>
 						  			<td class="type">s/ alcool</td>
 						  			<td class="price">1.50€</td>
@@ -117,6 +119,7 @@
 				  		<li onclick="addItem('lista_produtos1','Ice Tea','1.50')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="ice_tea.png" id="img_menu"/></td>
 						  			<td class="name">Ice Tea</td>
 						  			<td class="type">Sem alcool</td>
 						  			<td class="price">1.50€</td>
@@ -126,6 +129,7 @@
 				  		<li onclick="addItem('lista_produtos1','Café','1.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="cafe.png" id="img_menu"/></td>
 						  			<td class="name">Café</td>
 						  			<td class="type">Sem alcool</td>
 						  			<td class="price">1.00€</td>
@@ -135,6 +139,7 @@
 				  		<li onclick="addItem('lista_produtos1','Absinto','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="absinto.png" id="img_menu"/></td>
 						  			<td class="name">Absinto</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -144,6 +149,7 @@
 				  		<li onclick="addItem('lista_produtos1','Vodka Laranja','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="agua.png" id="img_menu"/></td>
 						  			<td class="name">Vodka Laranja</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -153,6 +159,7 @@
 				  		<li onclick="addItem('lista_produtos1','Vodka Limão','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="agua.png" id="img_menu"/></td>
 						  			<td class="name">Vodka Limão</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -162,6 +169,7 @@
 				  		<li onclick="addItem('lista_produtos1','Vodka Cola','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="agua.png" id="img_menu"/></td>
 						  			<td class="name">Vodka Cola</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -171,6 +179,7 @@
 				  		<li onclick="addItem('lista_produtos1','Rum','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="rum.png" id="img_menu"/></td>
 						  			<td class="name">Rum</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -180,6 +189,7 @@
 				  		<li onclick="addItem('lista_produtos1','Somersby de Maçã','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="somersby_m.png" id="img_menu"/></td>
 						  			<td class="name">Somersby de Maçã</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -189,6 +199,7 @@
 				  		<li onclick="addItem('lista_produtos1','Somersby Frutos Vermelhos','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="somersby_f.png" id="img_menu"/></td>
 						  			<td class="name">Somersby Frutos Vermelhos</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -198,6 +209,7 @@
 				  		<li onclick="addItem('lista_produtos1','Tequila','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="tequila.png" id="img_menu"/></td>
 						  			<td class="name">Tequila</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -207,6 +219,7 @@
 				  		<li onclick="addItem('lista_produtos1','Whisky','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="whisky.png" id="img_menu"/></td>
 						  			<td class="name">Whisky</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -216,6 +229,7 @@
 				  		<li onclick="addItem('lista_produtos1','Whisky Cola','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="whisky_cola.png" id="img_menu"/></td>
 						  			<td class="name">Whisky Cola</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -225,6 +239,7 @@
 				  		<li onclick="addItem('lista_produtos1','Vinho Branco','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="vinho_branco.png" id="img_menu"/></td>
 						  			<td class="name">Vinho Branco</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -234,6 +249,7 @@
 				  		<li onclick="addItem('lista_produtos1','Vinho Tinto','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="vinho_tinto.png" id="img_menu"/></td>
 						  			<td class="name">Vinho Tinto</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
