fix size of table

--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -67,7 +67,7 @@
   	<!--fim da barra fixa-->
   	<table style="position: absolute;width: 100%;"> <!--estes styles se calhar sao precisos tirar noos vossos pc-->
   		<tr>
-  			<td>
+  			<td style="width: 20%;">
 		  		<table id="submenu">
 		  			<tr>
 		  				<td><div class="icones_menu" id="beb" onclick="changeDiv('bebidas','comida')">Bebidas</div></td>
@@ -149,7 +149,7 @@
 				  		<li onclick="addItem('lista_produtos1','Vodka Laranja','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="td_img"><img src="agua.png" id="img_menu"/></td>
+			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
 						  			<td class="name">Vodka Laranja</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -159,7 +159,7 @@
 				  		<li onclick="addItem('lista_produtos1','Vodka Limão','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="td_img"><img src="agua.png" id="img_menu"/></td>
+			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
 						  			<td class="name">Vodka Limão</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -169,7 +169,7 @@
 				  		<li onclick="addItem('lista_produtos1','Vodka Cola','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
-			  						<td id="td_img"><img src="agua.png" id="img_menu"/></td>
+			  						<td id="td_img"><img src="vodka.png" id="img_menu"/></td>
 						  			<td class="name">Vodka Cola</td>
 						  			<td class="type">Com alcool</td>
 						  			<td class="price">2.00€</td>
@@ -360,7 +360,7 @@
 			  		</ul>
 			  	</div>
 			</td>
-			<td>
+			<td style="width: 20%;">
 				<div style="margin-right: 4%;">	
 					<table id="header_produtos">
 						<tr>
