start session storage

--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -137,7 +137,7 @@
       </table>
     </div>
     <!--fim tabela historico-->
-    <p id="historico_par">Total:</p>
+    <p id="historico_par" onclick="hist('Água')">Total:</p>
 
     <!--inicio da barra de musica no inferior-->
     <div id="rodape">
