--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -274,24 +274,27 @@
 			  			<li onclick="addItem('lista_produtos1','Hamburger','6.00')" class="icones_bebidas">
 			  				<table>
 			  					<tr>
+			  						<td id="td_img"><img src="sem_queijo.png" id="img_menu"/></td>
 						  			<td class="name">Hamburger</td>
 						  			<td class="price">6.00€</td>
 						  		</tr>
 						  	</table>
-		  					<p class="description_1">Pão, carne de vaca e alface</p>
+		  					<p class="description_1">Pão, carne de vaca, alface e tomate</p>
 				  		</li>
 				  		<li onclick="addItem('lista_produtos1','Cheeseburger','6.50')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="com_queijo.png" id="img_menu"/></td>
 						  			<td class="name">Cheeseburger</td>
 						  			<td class="price">6.50€</td>
 						  		</tr>
 						  	</table>
-				  			<p class="description">Pão, carne de vaca, queijo e alface</p>
+				  			<p class="description">Pão, carne de vaca, queijo, alface e tomate</p>
 				  		</li>
 				  		<li onclick="addItem('lista_produtos1','Cachorro Quente','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="cachorro.png" id="img_menu"/></td>
 						  			<td class="name">Cachorro Quente</td>
 						  			<td class="price">4.00€</td>
 						  		</tr>
@@ -301,6 +304,7 @@
 				  		<li onclick="addItem('lista_produtos1','Bifana','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="bifana.png" id="img_menu"/></td>
 						  			<td class="name">Bifana</td>
 						  			<td class="price">4.00€</td>
 						  		</tr>
@@ -310,6 +314,7 @@
 				  		<li onclick="addItem('lista_produtos1','Torradas','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="torradas.png" id="img_menu"/></td>
 						  			<td class="name">Torradas</td>
 						  			<td class="price">2.00€</td>
 						  		</tr>
@@ -319,6 +324,7 @@
 				  		<li onclick="addItem('lista_produtos1','Prego no Pão','4.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="prego.png" id="img_menu"/></td>
 						  			<td class="name">Prego no Pão</td>
 						  			<td class="price">4.00€</td>
 						  		</tr>
@@ -328,6 +334,7 @@
 				  		<li onclick="addItem('lista_produtos1','Amendoins','1.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="amendoins.png" id="img_menu"/></td>
 						  			<td class="name">Amendoins</td>
 						  			<td class="price">1.00€</td>
 						  		</tr>
@@ -336,6 +343,7 @@
 				  		<li onclick="addItem('lista_produtos1','Tremoços','1.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="tremoços.png" id="img_menu"/></td>
 						  			<td class="name">Tremoços</td>
 						  			<td class="price">1.00€</td>
 						  		</tr>
@@ -344,6 +352,7 @@
 				  		<li onclick="addItem('lista_produtos1','Lays Originais','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
+			  						<td id="td_img"><img src="lays.png" id="img_menu"/></td>
 						  			<td class="name">Batatas Lays Originais</td>
 						  			<td class="price">2.00€</td>
 						  		</tr>
@@ -352,6 +361,7 @@
 				  		<li onclick="addItem('lista_produtos1','Tiras de Milho','2.00')" class="icones_bebidas">
 				  			<table>
 				  				<tr>
+				  					<td id="td_img"><img src="tiras.png" id="img_menu"/></td>
 						  			<td class="name">Tiras de Milho</td>
 						  			<td class="price">2.00€</td>
 						  		</tr>
