--- a/Projeto/pagamento.html
+++ b/Projeto/pagamento.html
@@ -8,11 +8,11 @@
   		<meta charset="UTF-8">
 
   	</head>
-  	<body>
+  	<body onload="end()">
 
 
   		<div class="icones" id="pay">
-	  		<table>
+	  		<table align="center">
     			<tr>
     				<td><img class = "button_icone" src="clock.png"/></td>
     			</tr>	
@@ -22,6 +22,8 @@
  		<!--<p id="frase1"> Aguarde pelo empregado.</p>-->
  		<p id="frase2"> Obrigado pela visita! Esperamos que tenha gostado. </p>
  		<p id="frase3"> Até à próxima! </p>
+
+ 		<a href="index.html"><button class="icones" style="text-align: right;">Clique para iniciar</button></a>
 
   </body>
  </html>
