add jquery function that haves remove option

--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -10,6 +10,8 @@
   <script src="javascript.js"></script> <!--importa o codigo javascript do ficheiro javascript.js-->
   <script src="http://listjs.com/no-cdn/list.js"></script> 
 
+  <script src="jquery.js">></script> 
+
   </head>
   <body>
 
@@ -349,7 +351,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Lays Originais','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Lays Originais','2.00')" class="icones_bebidas">
 				  			<table>
 			  					<tr>
 			  						<td id="td_img"><img src="lays.png" id="img_menu"/></td>
@@ -358,7 +360,7 @@
 						  		</tr>
 						  	</table>
 				  		</li>
-				  		<li onclick="addItem('lista_produtos1','Tiras de Milho','2.00')" class="icones_bebidas">
+				  		<li onclick="addMoreRows('lista_produtos1','Tiras de Milho', '2.00')" class="icones_bebidas">
 				  			<table>
 				  				<tr>
 				  					<td id="td_img"><img src="tiras.png" id="img_menu"/></td>
@@ -380,7 +382,7 @@
 				</div>
 				<div id="lista_produtos">
 					<table id="lista_produtos1">
-					
+						
 			  		</table>
 			  	</div>
 			  	<div>
